Fixing magnify button, z-index and viewport issues

--- a/src/viewer/CornerstoneViewport.css
+++ b/src/viewer/CornerstoneViewport.css
@@ -1,4 +1,5 @@
 .CornerstoneViewport {
-  width: 100%;
   height: 100%;
+  position: relative;
+  width: 100%;
 }
